crud-flask-postgres/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: crud-flask-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        app.kubernetes.io/part-of: crud-flask-postgres
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: backend
          image: __BUILD__backend
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: crud-flask-postgres
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5000
